--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "nodemon": "^3.0.1",
     "postcss": "^8.5.6",
