--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
       - PORT=${PORT}
       - VOLC_TTS_APP_ID=${VOLC_TTS_APP_ID}
       - VOLC_TTS_ACCESS_KEY=${VOLC_TTS_ACCESS_KEY}
+      - VOLC_TTS_ACCESS_TOKEN=${VOLC_TTS_ACCESS_TOKEN}
+      - VOLC_VOICECLONE_RESOURCE_ID=${VOLC_VOICECLONE_RESOURCE_ID}
+      - VOLC_VOICECLONE_SPEAKER_ID=${VOLC_VOICECLONE_SPEAKER_ID}
+      - VOLC_VOICECLONE_ALLOWED_SPEAKER_IDS=${VOLC_VOICECLONE_ALLOWED_SPEAKER_IDS}
       - VOLC_TTS_RESOURCE_ID_V2=${VOLC_TTS_RESOURCE_ID_V2}
       - VOLC_TTS_RESOURCE_ID_V1=${VOLC_TTS_RESOURCE_ID_V1}
       - VOLC_TTS_RESOURCE_ID_ICL1=${VOLC_TTS_RESOURCE_ID_ICL1}
