--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "heic-convert": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
