--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "3000:3000"  # 将容器的3000端口映射到主机的3000端口
     volumes:
       # 挂载数据目录用于持久化存储
-      - ./data:/app/data
-      - ./uploads:/app/uploads
+      - media-data:/app/data
+      - media-uploads:/app/uploads
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=${PORT}
