--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-PORT=3000
+# Node.js Environment
 NODE_ENV=production
+PORT=3000
 
+# Volcano TTS Credentials
 VOLC_TTS_APP_ID=
+VOLC_TTS_ACCESS_KEY=
 VOLC_TTS_ACCESS_TOKEN=
-
+# Volcano TTS Resource IDs
 VOLC_TTS_RESOURCE_ID_V2=seed-tts-2.0
 VOLC_TTS_RESOURCE_ID_V1=seed-tts-1.0
 VOLC_TTS_RESOURCE_ID_ICL1=seed-icl-1.0
@@ -11,3 +14,5 @@ VOLC_TTS_RESOURCE_ID_ICL2=seed-icl-2.0
 VOLC_TTS_MODEL_V2=
 
 VOLC_VOICECLONE_RESOURCE_ID=
+VOLC_VOICECLONE_SPEAKER_ID=
+VOLC_VOICECLONE_ALLOWED_SPEAKER_IDS=
